test/should-fail/vsgc549a.f3
/* 
 * @test/compile-error
 *
 * An example of an attempt to use a keyword where one isn't expected.
 * In this case, the keyword is a vaild Java identifier, 
 * e.g., from jtextarea.insert(valStr, caret); 
 * and needs to be quoted with Guillemets (<< and >>).
 */
class Node {
    var insert: Number;
};
